# yobotics_sdk

./: CMakeLists.txt  README.md
cmake/: yobotics_sdkConfig.cmake.in  yobotics_sdkConfigVersion.cmake.in
example/: CMakeLists.txt
example/Y15/: CMakeLists.txt  Y15_low_level.cpp  Y15_robot_state_client.cpp  Y15_sport_client.cpp  Y15_stand_example.cpp
include/common/: decl.hpp  error.hpp
include/common/Timer/: Timer.hpp
include/common/lcm_types/: imu_data_t.lcm  motor_cmd_t.lcm  motor_state_t.lcm  rc_cmd_t.lcm  sport_client_cmd_t.lcm
include/common/lcm_types/cpp/: imu_data_t.hpp  motor_cmd_t.hpp  motor_state_t.hpp  rc_cmd_t.hpp  sport_client_cmd_t.hpp
include/common/thread/: PeriodicTask.h
include/robot/Y15/audio/: audio_error.hpp
include/robot/Y15/sport/: sport_api.hpp  sport_client.hpp  sport_error.hpp
include/robot/channel/: channel_name.hpp  channel_publisher.hpp  channel_subscriber.hpp
